Fix page load flicker

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -94,6 +94,19 @@
 
 * {
   transition: background-color 0.6s ease;
+  -webkit-transition: background-color 0.6s ease;
+  -moz-transition: background-color 0.6s ease;
+  -ms-transition: background-color 0.6s ease;
+  -o-transition: background-color 0.6s ease;
+}
+
+/* don't do css transitions when page loads to avoid flicker */
+.preload * {
+  transition: none !important;
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
 }
 
 /* main */
